[tool.poetry]
name = "graphql-sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "graphql_sandbox"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
faker = "^16.6.1"
pydantic = "^1.10.4"
numpy = "^1.24.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.155.4"}
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
